Created CRUD of Produtos

--- a/AppMVCBasic/AppMVCBasic.csproj
+++ b/AppMVCBasic/AppMVCBasic.csproj
@@ -6,6 +6,10 @@
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Views\Produtos\Index.cshtml~RF9065669.TMP" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
